[package]
name = "esp-vision"
version = "0.1.0"
authors = ["Ben Zhang <benzh@cs.berkeley.edu>"]
repository = "https://github.com/killercup/esp-vision.git"
homepage = "https://github.com/nebgnahz/esp-vision.git"
license = "MIT"
readme = "README.md"
documentation = "https://nebgnahz.github.io/esp-vision/esp_vision/index.html"
description = "Use ESP to learn more from computer vision"

[dependencies]
rust_vision = { git = "ssh://git@github.com/nebgnahz/rust_vision" }
